k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: cloud-chat
spec:
  selector:
    app: cloud-chat-backend
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: cloud-chat
spec:
  selector:
    app: cloud-chat-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: cloud-chat
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: cloud-chat
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: mailhog-service
  namespace: cloud-chat
spec:
  selector:
    app: mailhog
  ports:
    - name: smtp
      port: 1025
      targetPort: 1025
    - name: web
      port: 8025
      targetPort: 8025
  type: ClusterIP

---
# NodePort — зовнішній доступ через IP сервера
apiVersion: v1
kind: Service
metadata:
  name: frontend-nodeport
  namespace: cloud-chat
spec:
  selector:
    app: cloud-chat-frontend
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30082

---
apiVersion: v1
kind: Service
metadata:
  name: backend-nodeport
  namespace: cloud-chat
spec:
  selector:
    app: cloud-chat-backend
  type: NodePort
  ports:
    - port: 4000
      targetPort: 4000
      nodePort: 30081

---
apiVersion: v1
kind: Service
metadata:
  name: mailhog-nodeport
  namespace: cloud-chat
spec:
  selector:
    app: mailhog
  type: NodePort
  ports:
    - name: web
      port: 8025
      targetPort: 8025
      nodePort: 30825
